3B - update Admin - Store keywords

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -367,6 +367,7 @@
 						<li><a href="admin-range-super-cheap.html">Admin Super Cheap</a></li>
 						<li><a href="admin-categories-form-retail-size-add.html">Admin Category Retail Size Add</a></li>
 						<li><a href="admin-banner.html">Admin Manage Banner</a></li>
+						<li><a href="admin-setting-sections.html">Admin Setting On/Off Sections</a></li>
 					</ul>
 				</div>
 				<div class="admin">
