--- a/3B-NEW/seller-advertising-keywords-setting.html
+++ b/3B-NEW/seller-advertising-keywords-setting.html
@@ -383,7 +383,7 @@
 						<thead>
 							<tr>
 								<th width="38%">Từ khóa</th>
-								<th>Tỉ lệ tìm kiếm</th>
+								<th>Số lượt tìm kiếm</th>
 								<th>Giá thầu tham khảo</th>
 								<th>
 									Chọn
@@ -398,7 +398,7 @@
 									</div>
 								</td>
 								<td>
-									<label>98.99%</label>
+									<label>0</label>
 								</td>
 								<td>
 									<label>15.000đ</label>
@@ -417,7 +417,7 @@
 									</div>
 								</td>
 								<td>
-									<label>98.99%</label>
+									<label>99</label>
 								</td>
 								<td>
 									<label>15.000đ</label>
@@ -436,7 +436,7 @@
 									</div>
 								</td>
 								<td>
-									<label>98.99%</label>
+									<label>9899</label>
 								</td>
 								<td>
 									<label>15.000đ</label>
