--- a/3B-NEW/seller-advertising.html
+++ b/3B-NEW/seller-advertising.html
@@ -283,19 +283,31 @@
 								</div>
 								<div class="clearfix"></div>
 
-								<div class="col-md-6">
+								<div class="col-md-4">
+									<div class="btn-group margin-b">
+										<a href="#" class="btn btn-default active">Tất cả</a>
+										<a href="#" class="btn btn-default">Đang chạy</a>
+										<a href="#" class="btn btn-default">Tạm dừng</a>
+										<a href="#" class="btn btn-default">Kết thúc</a>
+									</div>
+								</div>
+								<div class="col-md-4">
 									<div class="input-group">
 										<span class="input-group-addon"><i class="fa fa-search"></i></span>
 										<input type="text" id="product-name" name="product-name" class="form-control" placeholder="Tìm sản phẩm">
 									</div>
 								</div>
-								<div class="col-md-6">
+								<div class="col-md-2">
 									<div class="input-group">
 										<a href="seller-advertising-add-product.html" class="btn btn-flat btn-danger" style="margin-bottom:8px;">
 											<i class="fa fa-plus"></i> Thêm sản phẩm mới
 										</a>
 									</div>
 								</div>
+								<div class="clearfix"></div>
+
+								
+								<div class="clearfix"></div>
 							</div>
 
 							<div class="table-responsive">
