--- a/3B-WEB/home.html
+++ b/3B-WEB/home.html
@@ -483,6 +483,131 @@
 	</div>
 	<!-- /END MAIN HEADER -->
 
+	<div class="hot-today">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="title">
+						<h3 class="pull-left">Giá sốc <span><img src="assets/images/svg/flash-orange.svg"></span> hôm nay</h3>
+						<span class="flash-time pull-right">
+							<span class="hour">12</span> : 
+							<span class="minute">46</span> : 
+							<span class="second">34</span>
+							<i class="fa fa-angle-right"></i>
+						</span>
+						<div class="clearfix"></div>
+					</div>
+				</div>
+
+				<div class="col-md-12">
+					<!-- BEGIN FLASH SALE -->
+					<div class="list-product homepage">
+						<!-- PRODUCT ITEM -->
+						<div class="product-item">
+							<a href="#">
+								<img class="p-image" src="assets/images/img9.png">
+								<span class="sale-label">-34%</span>
+							</a>
+							<div class="product-info">
+								<h4 class="price">125,000 đ</h4>
+								<div class="product-sold">
+									<img class="icon-progress" src="assets/images/svg/fire.svg">
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+											<span class="sr-only">Đã bán: 30/30</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- /END PRODUCT ITEM -->
+
+						<!-- PRODUCT ITEM -->
+						<div class="product-item">
+							<a href="#">
+								<img class="p-image" src="assets/images/img10.png">
+								<span class="sale-label">-34%</span>
+							</a>
+							<div class="product-info">
+								<h4 class="price">125,000 đ</h4>
+								<div class="product-sold">
+									<img class="icon-progress" src="assets/images/svg/fire.svg">
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+											<span class="sr-only">Đã bán: 12/30</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- /END PRODUCT ITEM -->
+
+						<!-- PRODUCT ITEM -->
+						<div class="product-item">
+							<a href="#">
+								<img class="p-image" src="assets/images/img11.png">
+								<span class="sale-label">-34%</span>
+							</a>
+							<div class="product-info">
+								<h4 class="price">125,000 đ</h4>
+								<div class="product-sold">
+									<img class="icon-progress" src="assets/images/svg/fire.svg">
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+											<span class="sr-only">Đã bán: 12/30</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- /END PRODUCT ITEM -->
+
+						<!-- PRODUCT ITEM -->
+						<div class="product-item">
+							<a href="#">
+								<img class="p-image" src="assets/images/img12.png">
+								<span class="sale-label">-34%</span>
+							</a>
+							<div class="product-info">
+								<h4 class="price">125,000 đ</h4>
+								<div class="product-sold">
+									<img class="icon-progress" src="assets/images/svg/fire.svg">
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+											<span class="sr-only">Đã bán: 10/30</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- /END PRODUCT ITEM -->
+
+						<!-- PRODUCT ITEM -->
+						<div class="product-item">
+							<a href="#">
+								<img class="p-image" src="assets/images/img13.png">
+								<span class="sale-label">-34%</span>
+							</a>
+							<div class="product-info">
+								<h4 class="price">125,000 đ</h4>
+								<div class="product-sold">
+									<img class="icon-progress" src="assets/images/svg/fire.svg">
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
+											<span class="sr-only">Đã bán: 1/30</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- /END PRODUCT ITEM -->
+					</div>
+					<!-- /END FLASH SALE -->
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<!-- BEGIN FEATURED -->
 	<div class="featured">
 		<div class="container">
