3B - update admin keywords-report list prices

--- a/3B-NEW/admin-keywords-report.html
+++ b/3B-NEW/admin-keywords-report.html
@@ -435,10 +435,26 @@
 									<p>Số tiền này chỉ có thể áp dụng cho dịch vụ đấu thầu từ khóa. Số tiền này sẽ không được hoàn lại vì bất cứ lý do gì</p>
 
 									<ul class="list-price">
-										<li>20,000</li>
-										<li>50,000</li>
-										<li>100,000</li>
-										<li>200,000</li>
+										<li class="active">
+											<div class="head card-bg-orange">20,000 đ<span>Tiền đấu thầu từ khóa</span></div>
+											<div class="text">20,000 đ</div>
+										</li>
+										<li>
+											<div class="head card-bg-blue">50,000 đ<span>Tiền đấu thầu từ khóa</span></div>
+											<div class="text">50,000 đ</div>
+										</li>
+										<li>
+											<div class="head card-bg-cyan">100,000 đ<span>Tiền đấu thầu từ khóa</span></div>
+											<div class="text">100,000 đ</div>
+										</li>
+										<li>
+											<div class="head card-bg-green">200,000 đ<span>Tiền đấu thầu từ khóa</span></div>
+											<div class="text">200,000 đ</div>
+										</li>
+										<li>
+											<div class="head card-bg-pink">500,000 đ<span>Tiền đấu thầu từ khóa</span></div>
+											<div class="text">500,000 đ</div>
+										</li>
 									</ul>
 
 									<!-- BEGIN METHOD PAYMENT -->
