3B - update keywords-report

--- a/3B-NEW/admin-keywords-report.html
+++ b/3B-NEW/admin-keywords-report.html
@@ -455,6 +455,10 @@
 											<div class="head card-bg-pink">500,000 đ<span>Tiền đấu thầu từ khóa</span></div>
 											<div class="text">500,000 đ</div>
 										</li>
+										<li>
+											<div class="head card-bg-red">1,000,000 đ<span>Tiền đấu thầu từ khóa</span></div>
+											<div class="text">1,000,000 đ</div>
+										</li>
 									</ul>
 
 									<!-- BEGIN METHOD PAYMENT -->
