--- a/3B-NEW/admin-banner-add.html
+++ b/3B-NEW/admin-banner-add.html
@@ -425,34 +425,36 @@
 											</div>
 										</div>
 
-										<div class="col-md-12"><label>Ngày hoạt động</label></div>
-										
-										<div class="input-daterange">
-											<div class="col-md-6">
-												<div class="form-group">
-													<div class="input-group small">
-														<span class="input-group-btn">
-															<span class="btn">Từ</span>
-														</span>
-														<input type="text" class="input-sm form-control" name="start" />
+										<div class="col-md-9">
+											<div class="row">
+												<div class="input-daterange">
+													<div class="col-md-12"><label>Ngày hoạt động</label></div>
+													<div class="col-md-6">
+														<div class="form-group">
+															<div class="input-group small">
+																<span class="input-group-btn">
+																	<span class="btn">Từ</span>
+																</span>
+																<input type="text" class="input-sm form-control" name="start" />
+															</div>
+														</div>
 													</div>
-												</div>
-											</div>
-											<div class="col-md-6">
-												<div class="form-group">
-													<div class="input-group small">
-														<span class="input-group-btn">
-															<span class="btn">đến</span>
-														</span>
-														<input type="text" class="input-sm form-control" name="end" />
+													<div class="col-md-6">
+														<div class="form-group">
+															<div class="input-group small">
+																<span class="input-group-btn">
+																	<span class="btn">đến</span>
+																</span>
+																<input type="text" class="input-sm form-control" name="end" />
+															</div>
+														</div>
 													</div>
 												</div>
 											</div>
 										</div>
-										
-										<div class="col-md-12">
+										<div class="col-md-3">
 											<div class="form-group">
-												<label>Trạng thái</label>
+												<label class="margin-b">Trạng thái</label>
 												<div class="input-group">
 													<button type="button" class="btn btn-sm btn-toggle pull-right" data-toggle="button" aria-pressed="false" autocomplete="off">
 															<div class="handle"></div>
@@ -460,6 +462,7 @@
 												</div>
 											</div>
 										</div>
+										<div class="clearfix"></div>
 									</div>
 									<button type="button" class="btn btn-danger">Lưu</button>
 									<a href="admin-banner.html" class="btn btn-default">Quay lại</a>
