3B - update style table admin manage banner

--- a/3B-NEW/admin-banner.html
+++ b/3B-NEW/admin-banner.html
@@ -391,7 +391,7 @@
 						<!-- BEGIN BOX BODY -->
 						<div class="box-body">
 							<div class="row">
-								<div class="col-md-8">
+								<div class="col-md-12">
 									<!-- BEGIN BUTTON ADD -->
 									<div class="input-group">
 										<a href="admin-banner-add.html" class="btn btn-flat btn-danger pull-left" style="margin-bottom:8px;">
@@ -406,7 +406,7 @@
 											<thead>
 												<tr>
 													<th>Ảnh</th>
-													<th>Banner URL</th>
+													<th width="45%">Banner URL</th>
 													<th>Ngày hoạt động</th>
 													<th style="text-align:center;">Thao tác</th>
 													<th style="text-align:right;">Kích hoạt</th>
@@ -418,6 +418,22 @@
 														<img class="icons-svg small" src="assets/images/svg/image-temp.svg">
 													</td>
 													<td>value...</td>
+													<td>01/03/2021 - 10/03/2021</td>
+													<td style="text-align:center;">
+														<a href="admin-banner-edit.html"><span class="badge bg-blue"><i class="fa fa-edit"></i></span></a>
+														<span class="badge bg-red" data-toggle="modal" data-target="#modal-deleteConfirm"><i class="fa fa-trash-o"></i></span>
+													</td>
+													<td>
+														<button type="button" class="btn btn-sm btn-toggle pull-right" data-toggle="button" aria-pressed="false" autocomplete="off">
+															<div class="handle"></div>
+														</button>
+													</td>
+												</tr>
+												<tr>
+													<td>
+														<img class="icons-svg small" src="assets/images/svg/image-temp.svg">
+													</td>
+													<td>https://dantri.com.vn/suc-khoe/gia-dinh-nguoi-hien-tim-muon-tim-nguoi-duoc-ghep-tim-giam-doc-bv-viet-duc-noi-gi-20210322105931045.htm</td>
 													<td>01/03/2021 - 10/03/2021</td>
 													<td style="text-align:center;">
 														<a href="admin-banner-edit.html"><span class="badge bg-blue"><i class="fa fa-edit"></i></span></a>
