3B - fix seller-advertising-keywords-setting

--- a/3B-NEW/seller-advertising-keywords-setting.html
+++ b/3B-NEW/seller-advertising-keywords-setting.html
@@ -330,8 +330,10 @@
 												<label>15.000đ</label>
 											</td>
 											<td>
-												<span>đ</span>
-												<input type="text" class="form-control input-sm" placeholder="1000" value="15000">
+												<div class="input-group">
+													<input type="text" class="form-control input-sm" placeholder="1000" value="15000">
+													<span class="input-group-addon">đ</span>
+												</div>												
 											</td>
 											<td>
 												<span class="badge bg-red" data-toggle="modal" data-target="#modal-deleteConfirm"><i class="fa fa-trash-o"></i></span>
@@ -340,7 +342,6 @@
 									</tbody>
 								</table>
 								<!-- /END TABLE PRODUCTS -->
-							</div>
 							</div>
 
 							<!-- BEGIN PAGINATION -->
