3B - update style 	- homepage (remove bottom banner - fix product hot today(mobile view)) 	- view-all-categories (fix view on mobile) 	- view-product-by-category (fix view on mobile)

--- a/3B-WEB/view-all-categories.html
+++ b/3B-WEB/view-all-categories.html
@@ -277,7 +277,7 @@
 		<div class="container">
 			<div class="row all-categories">
 				<!-- CONTENT -->
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-4">
 					<div class="item green">
 						<a href="#">
 							<img src="assets/images/icons-category/suit-and-bow-tie.png">
@@ -286,7 +286,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-4">
 					<div class="item red">
 						<a href="#">
 							<img src="assets/images/icons-category/women-dress.png">
@@ -295,7 +295,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-4">
 					<div class="item blue">
 						<a href="#">
 							<img src="assets/images/icons-category/mobile.png">
@@ -304,7 +304,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-4">
 					<div class="item yellow">
 						<a href="#">
 							<img src="assets/images/icons-category/feeding-bottle.png">
@@ -313,9 +313,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="clearfix"></div>
-
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-4">
 					<div class="item green">
 						<a href="#">
 							<img src="assets/images/icons-category/suit-and-bow-tie.png">
@@ -324,7 +322,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-4">
 					<div class="item red">
 						<a href="#">
 							<img src="assets/images/icons-category/women-dress.png">
@@ -333,7 +331,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-4">
 					<div class="item blue">
 						<a href="#">
 							<img src="assets/images/icons-category/mobile.png">
@@ -342,7 +340,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-4">
 					<div class="item yellow">
 						<a href="#">
 							<img src="assets/images/icons-category/feeding-bottle.png">
@@ -351,9 +349,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="clearfix"></div>
-
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-4">
 					<div class="item green">
 						<a href="#">
 							<img src="assets/images/icons-category/suit-and-bow-tie.png">
@@ -362,7 +358,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-4">
 					<div class="item red">
 						<a href="#">
 							<img src="assets/images/icons-category/women-dress.png">
@@ -371,7 +367,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-4">
 					<div class="item blue">
 						<a href="#">
 							<img src="assets/images/icons-category/mobile.png">
@@ -380,7 +376,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-4">
 					<div class="item yellow">
 						<a href="#">
 							<img src="assets/images/icons-category/feeding-bottle.png">
@@ -389,7 +385,6 @@
 						</a>
 					</div>
 				</div>
-				<div class="clearfix"></div>
 				<!-- /CONTENT -->
 			</div>
 		</div>
