--- a/3B-WEB/view-product-by-category.html
+++ b/3B-WEB/view-product-by-category.html
@@ -276,7 +276,7 @@
 	<!-- BEGIN STORE MAIN -->
 	<div class="store-content">
 		<div class="container">
-			<div class="row">
+			<div class="row column-reverse">
 				<!-- SIDEBAR -->
 				<div class="col-md-3">
 					<!-- BEGIN SIDEBAR LIST CATEGORY -->
@@ -438,7 +438,7 @@
 				<!-- CONTENT -->
 				<div class="col-md-9">
 					<!-- BEGIN TOP PRODUCTS -->
-					<div class="store-top-product">
+					<div class="store-top-product view-product-by-cat">
 						<h4>Electronic devices</h4>
 
 						<div class="sort">
