3B - fix seller-advertising-keywords-setting

--- a/3B-NEW/seller-advertising-keywords-setting.html
+++ b/3B-NEW/seller-advertising-keywords-setting.html
@@ -330,10 +330,12 @@
 												<label>15.000đ</label>
 											</td>
 											<td>
-												<div class="input-group">
-													<input type="text" class="form-control input-sm" placeholder="1000" value="15000">
-													<span class="input-group-addon">đ</span>
-												</div>												
+												<div class="pull-left">
+													<div class="input-group">
+														<input type="text" class="form-control input-sm" placeholder="1000" value="15000">
+														<span class="input-group-addon">đ</span>
+													</div>
+												</div>
 											</td>
 											<td>
 												<span class="badge bg-red" data-toggle="modal" data-target="#modal-deleteConfirm"><i class="fa fa-trash-o"></i></span>
