3B - add seller-advertising-history

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -377,6 +377,7 @@
 						<li><a href="seller-advertising.html">Seller Advertising</a></li>
 						<li><a href="seller-advertising-shop.html">Seller Advertising Shop</a></li>
 						<li><a href="seller-advertising-view-setting.html">Seller Advertising View Setting</a></li>
+						<li><a href="seller-advertising-history.html">Seller Advertising History</a></li>
 					</ul>
 				</div>
 			</div>
