3B - update style mobile menu homepage

--- a/3B-WEB/home.html
+++ b/3B-WEB/home.html
@@ -261,12 +261,17 @@
 		<ul class="menu-container">
 			<li class="icon">
 				<a href="view-all-categories.html">
-					<span class="text-on-mobile">Xem tất cả danh mục</span>
-					<img src="assets/images/svg/menu-bar.svg">
+					<img class="menu-icon" src="assets/images/icons-category/menu.png">
 				</a>
 			</li>
 			<li>
-				<a href="view-product-by-category.html"><span class="custom-wrap-1line">Electronic Devices<i class="fa fa-angle-down"></i></span></a>
+				<a href="view-product-by-category.html">
+					<span class="custom-wrap-1line">
+						<img class="icon-mobile" src="assets/images/icons-category/headphones.png">
+						Electronic Devices
+						<i class="fa fa-angle-down"></i>
+					</span>
+				</a>
 				<div class="menu-sub">
 					<div class="sub-row">
 						<ul class="sub-items">
@@ -354,10 +359,22 @@
 					</div>
 				</div>
 			</li>
-			<li><a href="#"><span class="custom-wrap-1line">TV & Appiliantion <i class="fa fa-angle-down"></i></span></a></li>
 			<li>
 				<a href="#">
-					<span class="custom-wrap-1line">test add thêm <i class="fa fa-angle-down"></i></span> 
+					<span class="custom-wrap-1line">
+						<img class="icon-mobile" src="assets/images/icons-category/home-life.png">
+						Home & Funiture
+						<i class="fa fa-angle-down"></i>
+					</span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<span class="custom-wrap-1line">
+						<img class="icon-mobile" src="assets/images/icons-category/suit-and-bow-tie.png">
+						Men's Fashion
+						<i class="fa fa-angle-down"></i>
+					</span> 
 				</a>
 				<div class="menu-sub">
 					<div class="sub-row">
@@ -446,9 +463,33 @@
 					</div>
 				</div>
 			</li>
-			<li><a href="#"><span class="custom-wrap-1line">Women <i class="fa fa-angle-down"></i></span></a></li>
-			<li><a href="#"><span class="custom-wrap-1line">Baby & Kids <i class="fa fa-angle-down"></i></span></a></li>
-			<li><a href="#"><span class="custom-wrap-1line">Home & Funiture <i class="fa fa-angle-down"></i></span></a></li>
+			<li>
+				<a href="#">
+					<span class="custom-wrap-1line">
+						<img class="icon-mobile" src="assets/images/icons-category/women-dress.png">
+						Women's Fashion
+						<i class="fa fa-angle-down"></i>
+					</span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<span class="custom-wrap-1line">
+						<img class="icon-mobile" src="assets/images/icons-category/feeding-bottle.png">
+						Baby & Kids
+						<i class="fa fa-angle-down"></i>
+					</span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<span class="custom-wrap-1line">
+						<img class="icon-mobile" src="assets/images/icons-category/laptop.png">
+						Laptop & Computer
+						<i class="fa fa-angle-down"></i>
+					</span>
+				</a>
+			</li>
 		</ul>
 		<div class="container">
 			<div class="row">
