--- a/3B-WEB/home.html
+++ b/3B-WEB/home.html
@@ -491,16 +491,40 @@
 				</a>
 			</li>
 		</ul>
+	</div>
+	<!-- /END MAIN HEADER -->
+
+	<div class="banner-carousel">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
-					<img class="banner-slider object-fit" src="assets/images/banner.png">
+				<div id="slideCarousel" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#slideCarousel" data-slide-to="0" class="active"></li>
+						<li data-target="#slideCarousel" data-slide-to="1"></li>
+					</ol>
+
+					<div class="carousel-inner">
+						<div class="item active">
+							<img src="assets/images/banner1.jpg">
+						</div>
+						<div class="item">
+							<img src="assets/images/banner2.jpg">
+						</div>
+					</div>
+
+					<!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+						<span class="glyphicon glyphicon-chevron-left"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="right carousel-control" href="#myCarousel" data-slide="next">
+						<span class="glyphicon glyphicon-chevron-right"></span>
+						<span class="sr-only">Next</span> -->
+					</a>
 				</div>
 				<div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
-	<!-- /END MAIN HEADER -->
 
 	<div class="hot-today">
 		<div class="container">
