--- a/3B-WEB/view-product-by-category.html
+++ b/3B-WEB/view-product-by-category.html
@@ -264,14 +264,65 @@
 				<div class="col-md-12">
 					<ul>
 						<li><a href="#">Home</a></li>
-						<li><a href="#">Category</a></li>
-						<li>Computer</li>
+						<li><a href="#">All Category</a></li>
+						<li>Electronic Devices</li>
 					</ul> 
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- /END BREADCRUMBS -->
+
+	<!-- MENU -->
+	<div class="content main-header">
+		<div class="container">
+			<ul class="menu-container">
+				<li>
+					<a href="view-product-by-category.html">
+						<span class="custom-wrap-1line">
+							Điện máy & Gia dụng
+						</span>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="custom-wrap-1line">
+							Laptop & Computer
+						</span>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="custom-wrap-1line">
+							Tivi - Màn Hình
+						</span> 
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="custom-wrap-1line">
+							PC - Máy tính đồng bộ
+						</span>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="custom-wrap-1line">
+							Linh kiện điện tử
+						</span>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="custom-wrap-1line">
+							Thiết bị âm thanh
+						</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<!-- /END MENU -->
 	
 	<!-- BEGIN STORE MAIN -->
 	<div class="store-content">
@@ -280,7 +331,7 @@
 				<!-- SIDEBAR -->
 				<div class="col-md-3">
 					<!-- BEGIN SIDEBAR LIST CATEGORY -->
-					<div class="sidebar all-category">
+					<div class="sidebar all-category hide-on-mobile">
 						<h4>All Category</h4>
 						<ul>
 							<li>
@@ -318,7 +369,7 @@
 					<!-- /END SIDEBAR LIST CATEGORY -->
 
 					<!-- BEGIN SIDEBAR PRICE RANGE -->
-					<div class="sidebar price-range">
+					<div class="sidebar price-range hide-on-mobile">
 						<h4>Price Range</h4>
 
 						<div class="row">
@@ -337,7 +388,7 @@
 					<!-- /END SIDEBAR PRICE RANGE -->
 
 					<!-- BEGIN SIDEBAR SALE -->
-					<div class="sidebar sale">
+					<div class="sidebar sale hide-on-mobile">
 						<h4>Sale</h4>
 						<ul>
 							<li>
@@ -382,7 +433,7 @@
 					<!-- /END SIDEBAR SALE -->
 
 					<!-- BEGIN SIDEBAR PLACE -->
-					<div class="sidebar place">
+					<div class="sidebar place hide-on-mobile">
 						<h4>Place</h4>
 						<div class="custom-slb">
 							<select>
@@ -396,7 +447,7 @@
 					<!-- /END SIDEBAR PLACE -->
 
 					<!-- BEGIN SIDEBAR RATING -->
-					<div class="sidebar rating">
+					<div class="sidebar rating hide-on-mobile">
 						<h4>Rating</h4>
 						<ul class="stars">
 							<li><img src="assets/images/svg/star-1.svg"></li>
@@ -460,6 +511,10 @@
 									<option value="1">Low to high</option>
 									<option value="2">High to low</option>
 								</select>
+							</div>
+
+							<div class="filter-btn pull-right">
+								<a href="#" data-toggle="modal" data-target="#filterModal"><img src="assets/images/icons-category/filter.png"></a>
 							</div>
 						</div>
 
@@ -773,6 +828,133 @@
 		</div>
 	</footer>
 	<!-- /END FOOTER -->
+
+	<div id="filterModal" class="modal filter-modal" data-backdrop="static">
+		<div class="modal-dialog custom-modal">
+			<div class="modal-content">
+				<span class="close" data-dismiss="modal"><img src="assets/images/svg/x-circle.svg"></span>
+
+				<!-- BEGIN SIDEBAR RATING -->
+					<div class="sidebar rating">
+						<h4>Rating</h4>
+						<ul class="stars">
+							<li><img src="assets/images/svg/star-1.svg"></li>
+							<li><img src="assets/images/svg/star-1.svg"></li>
+							<li><img src="assets/images/svg/star-1.svg"></li>
+							<li><img src="assets/images/svg/star-1.svg"></li>
+							<li><img src="assets/images/svg/star-2.svg"></li>
+							<li><span>And up</span></li>
+						</ul>
+						<ul class="stars">
+							<li><img src="assets/images/svg/star-1.svg"></li>
+							<li><img src="assets/images/svg/star-1.svg"></li>
+							<li><img src="assets/images/svg/star-1.svg"></li>
+							<li><img src="assets/images/svg/star-2.svg"></li>
+							<li><img src="assets/images/svg/star-2.svg"></li>
+							<li><span>And up</span></li>
+						</ul>
+						<ul class="stars">
+							<li><img src="assets/images/svg/star-1.svg"></li>
+							<li><img src="assets/images/svg/star-1.svg"></li>
+							<li><img src="assets/images/svg/star-2.svg"></li>
+							<li><img src="assets/images/svg/star-2.svg"></li>
+							<li><img src="assets/images/svg/star-2.svg"></li>
+							<li><span>And up</span></li>
+						</ul>
+						<ul class="stars">
+							<li><img src="assets/images/svg/star-1.svg"></li>
+							<li><img src="assets/images/svg/star-2.svg"></li>
+							<li><img src="assets/images/svg/star-2.svg"></li>
+							<li><img src="assets/images/svg/star-2.svg"></li>
+							<li><img src="assets/images/svg/star-2.svg"></li>
+							<li><span>And up</span></li>
+						</ul>
+					</div>
+					<!-- /END SIDEBAR RATING -->
+
+				<!-- BEGIN SIDEBAR SALE -->
+				<div class="sidebar sale">
+					<h4>Sale</h4>
+					<ul>
+						<li>
+							<div class="chk">
+								<input type="checkbox" name="chk13" id="chk13" class="chk-custom" >
+								<label for="chk13" class="chk-custom-label">Sale up to 10%</label>
+							</div>
+						</li>
+						<li>
+							<div class="chk">
+								<input type="checkbox" name="chk14" id="chk14" class="chk-custom" >
+								<label for="chk14" class="chk-custom-label">Sale up to 10%</label>
+							</div>
+						</li>
+						<li>
+							<div class="chk">
+								<input type="checkbox" name="chk15" id="chk15" class="chk-custom" >
+								<label for="chk15" class="chk-custom-label">Sale up to 10%</label>
+							</div>
+						</li>
+						<li>
+							<div class="chk">
+								<input type="checkbox" name="chk16" id="chk16" class="chk-custom" >
+								<label for="chk16" class="chk-custom-label">Sale up to 10%</label>
+							</div>
+						</li>
+						<li>
+							<div class="chk">
+								<input type="checkbox" name="chk17" id="chk17" class="chk-custom" >
+								<label for="chk17" class="chk-custom-label">Sale up to 10%</label>
+							</div>
+						</li>
+						<li>
+							<div class="chk">
+								<input type="checkbox" name="chk18" id="chk18" class="chk-custom" >
+								<label for="chk18" class="chk-custom-label">Sale up to 10%</label>
+							</div>
+						</li>
+					</ul>
+					<a class="loadmore" href="#">Load more</a>
+				</div>
+				<!-- /END SIDEBAR SALE -->
+
+				<!-- BEGIN SIDEBAR PRICE RANGE -->
+				<div class="sidebar price-range">
+					<h4>Price Range</h4>
+
+					<div class="row">
+						<div class="form-group col-md-6">
+							<label>Min</label>
+							<input type="text" class="form-control input-lg" placeholder="$">
+						</div>
+						<div class="form-group col-md-6">
+							<label>Max</label>
+							<input type="text" class="form-control input-lg" placeholder="$">
+						</div>
+						<div class="clearfix"></div>
+					</div>
+				</div>
+				<!-- /END SIDEBAR PRICE RANGE -->
+
+				<!-- BEGIN SIDEBAR PLACE -->
+					<div class="sidebar place">
+						<h4>Place</h4>
+						<div class="custom-slb">
+							<select>
+								<option value="0">Hà Nội</option>
+								<option value="1">Hà Nội 2</option>
+								<option value="2">Hồ Chí Minh</option>
+								<option value="3">Đà Nẵng</option>
+							</select>
+						</div>
+					</div>
+					<!-- /END SIDEBAR PLACE -->
+
+				<button class="btn btn-default">Reset</button>
+				<button class="btn btn-danger btn-perspective">Apply</button>
+
+			</div>
+		</div>
+	</div>
 
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
