--- a/3B-WEB/product-details.html
+++ b/3B-WEB/product-details.html
@@ -59,14 +59,14 @@
 		<div class="header">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-2">
+					<div class="col-md-2 col-xs-2">
 						<!-- BEGIN LOGO -->
 						<div class="logo">
 							<h1><a href="index.html"><img src="assets/images/logo.png"></a></h1>
 						</div>
 						<!-- /END LOGO -->
 					</div>
-					<div class="col-md-7">
+					<div class="col-md-7 col-xs-10">
 						<!-- BEGIN SEARCH BOX -->
 						<div class="search-box">
 							<div class="input-group margin">
