3B - update style product-details mobile

--- a/3B-WEB/product-details.html
+++ b/3B-WEB/product-details.html
@@ -589,24 +589,26 @@
 							</div>
 							<div class="col-md-9">
 								<!-- BEGIN STORE STATISTIC -->
-								<ul class="store-statistic pull-left">
-									<li>
-										<img class="pull-left" src="assets/images/svg/product-1.svg">
-										<p>1200<span>Product</span></p>
-									</li>
-									<li>
-										<img class="pull-left" src="assets/images/svg/star.svg">
-										<p>5.0<span>Rating</span></p>
-									</li>
-									<li>
-										<img class="pull-left" src="assets/images/svg/sold.svg">
-										<p>95<span>sold</span></p>
-									</li>
-									<li>
-										<img class="pull-left" src="assets/images/svg/chat.svg">
-										<p>95%<span>Chat</span></p>
-									</li>
-								</ul>
+								<div class="store-statistic-container">
+									<ul class="store-statistic pull-left">
+										<li>
+											<img class="pull-left" src="assets/images/svg/product-1.svg">
+											<p>1200<span>Product</span></p>
+										</li>
+										<li>
+											<img class="pull-left" src="assets/images/svg/star.svg">
+											<p>5.0<span>Rating</span></p>
+										</li>
+										<li>
+											<img class="pull-left" src="assets/images/svg/sold.svg">
+											<p>95<span>sold</span></p>
+										</li>
+										<li>
+											<img class="pull-left" src="assets/images/svg/chat.svg">
+											<p>95%<span>Chat</span></p>
+										</li>
+									</ul>
+								</div>
 								<!-- /END STORE STATISTIC -->
 
 								<!-- BEGIN STORE CONTROL -->
@@ -1146,7 +1148,7 @@
 									<td class="title vertical-top">
 										<span>Product</span>
 									</td>
-									<td rowspan="3">
+									<td rowspan="3" class="list-compare-container">
 										<ul class="list-compare">
 											<li>
 												<!-- PRODUCT ITEM -->
