--- a/3B-NEW/buyer-order-pairing.html
+++ b/3B-NEW/buyer-order-pairing.html
@@ -181,7 +181,7 @@
 					<div class="filter">
 						<ul>
 							<li><a href="buyer-order-waiting-payment.html">Waiting payment</a></li>
-							<li class="active"><a href="buyer-order-pairing.html">Pairing</a></li>
+							<li class="active"><a href="buyer-order-pairing.html">Pairing <span class="notify_number">32</span></a></li>
 							<li><a href="buyer-order-waiting-confirm.html">Waiting confirm</a></li>
 							<li><a href="buyer-order-waiting-ship.html">Wait ship</a></li>
 							<li><a href="buyer-order-shipping.html">Shipping</a></li>
