3B - add class active sort filter button

--- a/3B-WEB/outlet.html
+++ b/3B-WEB/outlet.html
@@ -475,7 +475,7 @@
 							<span>Sort By:</span>
 							<button class="btn btn-default"  data-toggle="modal" data-target="#sortSize">Size</button>
 
-							<button class="btn btn-default"  data-toggle="modal" data-target="#sortBrand">Brand</button>
+							<button class="btn btn-default active"  data-toggle="modal" data-target="#sortBrand">Brand</button>
 
 							<div class="custom-slb">
 								<select>
