--- a/3B-WEB/home.html
+++ b/3B-WEB/home.html
@@ -644,6 +644,26 @@
 							</div>
 						</div>
 						<!-- /END PRODUCT ITEM -->
+
+						<!-- PRODUCT ITEM -->
+						<div class="product-item">
+							<a href="#">
+								<img class="p-image" src="assets/images/img11.png">
+								<span class="sale-label">-34%</span>
+							</a>
+							<div class="product-info">
+								<h4 class="price">125,000 đ</h4>
+								<div class="product-sold">
+									<img class="icon-progress" src="assets/images/svg/fire.svg">
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+											<span class="sr-only">Đã bán: 12/30</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- /END PRODUCT ITEM -->
 					</div>
 					<!-- /END FLASH SALE -->
 				</div>
