3B - update style seller-banking-account

--- a/3B-NEW/seller-banking-account.html
+++ b/3B-NEW/seller-banking-account.html
@@ -262,19 +262,58 @@
 					<!-- BEGIN BODY -->
 					<div class="body">
 						<div class="row">
-							<div class="col-md-3">
+							<div class="col-lg-3 col-md-4 col-sm-6">
 								<a href="seller-banking-account-detail.html">
-									<div class="body-item">
-										<img class="object-fit" src="assets/images/banks/vietcombank.png">
-										<div class="name">Vietcombank <span>**** 7958</span> <span class="text-green pull-right">Mặc đinh</span></div>
+									<div class="body-item seller-banking-account">
+										<div class="logo-bank">
+											<img class="object-fit" src="assets/images/banks/vietcombank.png">
+										</div>
+										<h4>Vietcombank <span class="text-green">(Mặc định)</span></h4>
+										<h3>**** 7958</h3>
 									</div>
 								</a>
 							</div>
-							<div class="col-md-3">
+							<div class="col-lg-3 col-md-4 col-sm-6">
 								<a href="seller-banking-account-detail.html">
-									<div class="body-item">
-										<img class="object-fit" src="assets/images/banks/bidv.png">
-										<div class="name">BIDV <span>**** 7958</span></div>
+									<div class="body-item seller-banking-account">
+										<div class="logo-bank">
+											<img class="object-fit" src="assets/images/banks/bidv.png">
+										</div>
+										<h4>BIDV</h4>
+										<h3>**** 7958</h3>
+									</div>
+								</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6">
+								<a href="seller-banking-account-detail.html">
+									<div class="body-item seller-banking-account">
+										<div class="logo-bank">
+											<img class="object-fit" src="assets/images/banks/mb.png">
+										</div>
+										<h4>MB</h4>
+										<h3>**** 7958</h3>
+									</div>
+								</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6">
+								<a href="seller-banking-account-detail.html">
+									<div class="body-item seller-banking-account">
+										<div class="logo-bank">
+											<img class="object-fit" src="assets/images/banks/msb.png">
+										</div>
+										<h4>MSB</h4>
+										<h3>**** 7958</h3>
+									</div>
+								</a>
+							</div>
+							<div class="col-lg-3 col-md-4 col-sm-6">
+								<a href="seller-banking-account-detail.html">
+									<div class="body-item seller-banking-account">
+										<div class="logo-bank">
+											<img class="object-fit" src="assets/images/banks/vietinbank.png">
+										</div>
+										<h4>VIETINBANK</h4>
+										<h3>**** 7958</h3>
 									</div>
 								</a>
 							</div>
