3B - update admin products-form-add

--- a/3B-NEW/admin-products-form-add.html
+++ b/3B-NEW/admin-products-form-add.html
@@ -614,7 +614,6 @@
 											<li><input type="text" class="form-control" placeholder="đ Giá lẻ"></li>
 											<li><input type="text" class="form-control" placeholder="đ Giá ghép đơn"></li>
 											<li><input type="text" class="form-control" placeholder="Kho hàng"></li>
-											<li><input type="text" class="form-control" placeholder="Mã"></li>
 											<li><button type="button" class="btn btn-flat btn-success">Áp dụng cho tất cả</button></li>
 										</ul>
 
@@ -771,6 +770,22 @@
 												<label>Ảnh 8</label>
 											</li>
 										</ul>
+									</div>
+									<!-- /END BLOCK -->
+
+									<!-- BEGIN BLOCK -->
+									<div id="sku" class="block">
+										<h5 class="form-title">
+											<span><i class="fa fa-image margin-r-5"></i> SKU</span>
+										</h5>
+
+										<div class="form-group">
+											<label>SKU sản phẩm</label>
+											<div class="input-group">
+												<span class="input-group-addon"><i class="fa fa-tag"></i></span>
+												<input type="text" class="form-control" placeholder="Tên sản phẩm">
+											</div>
+										</div>
 									</div>
 									<!-- /END BLOCK -->
 
